2007-06-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py: revision control check in
	* src/DbManager.py: revision control check in
	* src/glade/gramps.glade: revision control check in

2007-06-18  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: check for revisions

2007-06-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py: support lock file

2007-06-18  Alex Roitman  <shura@gramps-project.org>
	* src/DateEdit.py (DateEditorDialog.switch_calendar): Only convert
	non-empty dates to new calendar.

2007-06-17  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Clarification in wording: #1071.
	* src/GrampsCfg.py (NameFormatEditDlg.cb_format_changed): Catch
	exception when format string is invalid.

2007-06-16  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: add user sorting to manager lists

2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py (start_url): Correctly parse url type.

2007-06-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: fix typo
	* src/GrampsDb/_GrampsDBDir.py: check for writability, otherwise open as readonly
	* src/DbManager.py: use single, user configurable database path
	* data/gramps.schemas.in: set default path to ~/.gramps/grampsdb
	
2007-06-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: additional database path
	* src/Config/_GrampsConfigKeys.py: additional database path
	* src/DbManager.py: additional database path
	* src/GrampsDbUtils/Makefile.am: additional database path
	* src/Makefile.am: additional database path
	* data/gramps.schemas.in: additional database path

2007-06-16  Brian Pepple  <bpepple@fedoraproject.org>
	* data/gramps.desktop.in: Fix desktop file to conform to desktop
	file specs.

2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsChildOfFilterMatch.py
	(IsChildOfFilterMatch): Subclass MatchesFilter.