@@ -1,3 +1,6 @@
+2007-06-18  Brian Matherly  <brian@gramps-project.org>
+	* src/DbManager.py: make path recursive. Make default db dir consistent.
+
 2007-06-18  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_GrampsDBDir.py: revision control check in
 	* src/DbManager.py: revision control check in
